--- a/css/icons.css
+++ b/css/icons.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('../fonts/icomoon.eot?-53lke8');
-	src:url('../fonts/icomoon.eot?#iefix-53lke8') format('embedded-opentype'),
-		url('../fonts/icomoon.woff?-53lke8') format('woff'),
-		url('../fonts/icomoon.ttf?-53lke8') format('truetype'),
-		url('../fonts/icomoon.svg?-53lke8#icomoon') format('svg');
+	src:url('../fonts/icomoon.eot?rl0isd');
+	src:url('../fonts/icomoon.eot?#iefixrl0isd') format('embedded-opentype'),
+		url('../fonts/icomoon.woff?rl0isd') format('woff'),
+		url('../fonts/icomoon.ttf?rl0isd') format('truetype'),
+		url('../fonts/icomoon.svg?rl0isd#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -26,21 +26,9 @@
 .icon-bars:before {
 	content: "\e600";
 }
-.icon-heart:before {
-	content: "\e601";
-}
-.icon-question:before {
-	content: "\e602";
-}
-.icon-info:before {
-	content: "\e603";
-}
-.icon-cancel-circle:before {
+.icon-menu:before {
 	content: "\e604";
 }
-.icon-checkmark-circle:before {
-	content: "\e605";
-}
-.icon-loop:before {
-	content: "\e606";
+.icon-question:before {
+	content: "\e601";
 }
