--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,30 @@ header span.topnav-active {
   float: right;
 }
 
+/**
+  *Top menu
+  */
+#topmenu {
+  position: absolute;
+  top: 64px;
+  right: 0;
+  width: 200px;
+  background-color: #556270;
+}
+
+#topmenu ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  font-size: 1.3rem;
+}
+
+#topmenu ul li {
+  display: block;
+  padding: 13.5px 0;
+  border-top: 1px solid white;
+}
+
 
 /* Main Content
  **********************************************/
@@ -341,7 +365,7 @@ footer ul li:last-child {
 }
 
 /* active state which can be assigned via scripting */
-footer ul li.botnav-active {
+/*footer ul li*/.botnav-active {
   color: #ddd;
   background-color: #3B454E;
 }
