Adapted the topmenu to show reduced items when less than 2 brands are loaded included a couple of hacks to make the topmenu switching back to reduced when deleteing brands -- controller needs clean-up, is not DRY anymore

--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,11 @@ header span.topnav-active {
   border-top: 1px solid white;
 }
 
+#reduced-topmenu li {
+  font-style: italic;
+  color: #ddd;
+}
+
 
 /* Main Content
  **********************************************/
