--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,7 @@ header span.topnav-active {
 }
 
 /* only 1 text field (for name) which is styled differently and needs to be longer */
-.bubble input[type="text"] {
+.bubble input[placeholder="Name"] {
   font-size: 1.5rem;
   display: block;
   width: 230px;
